@@ -50,10 +50,13 @@ class Eab_Events_RsvpEmail {
 		$from = $from ? $from : get_option('admin_email');
 		$subject = $this->_data->get_option('eab_rsvps-email-subject');
 		$body = $this->_data->get_option('eab_rsvps-email-body');
+		
+		$from_name = $this->_data->get_option('eab_rsvps-email-from-name');
+		$from_name = ! empty( $from_name ) ? $from_name : get_bloginfo( 'name' );
 
 		if (!is_email($user->user_email) || empty($from) || empty($subject) || empty($body)) return false;
 		$headers = array(
-			'From: ' . $from,
+			'From: ' . $from_name . ' <' . $from . '>',
 			'Content-Type: ' . $this->email_charset() . '; charset="' . get_option('blog_charset') . '"'
 		);
 
@@ -65,6 +68,11 @@ class Eab_Events_RsvpEmail {
 			$codec->expand($body, Eab_Macro_Codec::FILTER_BODY),
 			$headers
 		);
+		ob_start();
+		print_r($headers);
+		$r = ob_get_clean();
+		error_log($user->user_email);
+		error_log($r);
 		remove_filter('wp_mail_content_type', array($this, 'email_charset'));
 	}
 
@@ -85,6 +93,7 @@ class Eab_Events_RsvpEmail {
 	function save_settings ($options) {
 		$data = stripslashes_deep($_POST);
 		$options['eab_rsvps-email-from'] = @$data['eab_rsvps']['email-from'];
+		$options['eab_rsvps-email-from-name'] = @$data['eab_rsvps']['email-from-name'];
 		$options['eab_rsvps-email-subject'] = @$data['eab_rsvps']['email-subject'];
 		$options['eab_rsvps-email-body'] = @$data['eab_rsvps-email-body'];
 		return $options;
@@ -96,6 +105,8 @@ class Eab_Events_RsvpEmail {
 		
 		$from = $this->_data->get_option('eab_rsvps-email-from');
 		$from = $from ? $from : get_option('admin_email');
+		$from_name = $this->_data->get_option('eab_rsvps-email-from-name');
+		$from_name = ! empty( $from_name ) ? $from_name : get_bloginfo( 'name' );
 		$subject = $this->_data->get_option('eab_rsvps-email-subject');
 		$body = $this->_data->get_option('eab_rsvps-email-body');
 		
@@ -107,6 +118,11 @@ class Eab_Events_RsvpEmail {
 <div id="eab-settings-eab_rsvps_email" class="eab-metabox postbox">
 	<h3 class="eab-hndle"><?php _e('RSVP Email settings', Eab_EventsHub::TEXT_DOMAIN); ?></h3>
 	<div class="eab-inside">
+		<div class="eab-settings-settings_item">
+	    	<label for="eab_event-eab_rsvps-from-name"><?php _e('From email name', Eab_EventsHub::TEXT_DOMAIN); ?></label>
+			<span><?php echo $tips->add_tip(__('This is the name the RSVP email will be sent from', Eab_EventsHub::TEXT_DOMAIN)); ?></span>
+			<input type="text" id="eab_event-eab_rsvps-from-name" name="eab_rsvps[email-from-name]" value="<?php esc_attr_e($from_name); ?>" />
+	    </div>
 		<div class="eab-settings-settings_item">
 	    	<label for="eab_event-eab_rsvps-from"><?php _e('From email address', Eab_EventsHub::TEXT_DOMAIN); ?></label>
 			<span><?php echo $tips->add_tip(__('This is the address the RSVP email will be sent from', Eab_EventsHub::TEXT_DOMAIN)); ?></span>
